--- a/package.json
+++ b/package.json
@@ -2,5 +2,24 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^6.6.5"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "socialnetwork-linderman",
+  "description": "",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nvmax/SocialNetwork-Linderman.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nvmax/SocialNetwork-Linderman/issues"
+  },
+  "homepage": "https://github.com/nvmax/SocialNetwork-Linderman#readme"
 }
